compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__multiple_discarded_args_in_external_are_passed_correctly_2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 416
expression: "\n@external(erlang, \"wibble\", \"wobble\")\npub fn woo(__: a, _two: b) -> Nil\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "wibble", "wobble")
pub fn woo(__: a, _two: b) -> Nil


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([woo/2]).

-file("project/test/my/mod.gleam", 3).
-spec woo(any(), any()) -> nil.
woo(Argument, _two) ->
    wibble:wobble(Argument, _two).
