compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__no_body.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 256
expression: "\n@external(erlang, \"one\", \"one\")\npub fn one(x: Int) -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "one")
pub fn one(x: Int) -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([one/1]).

-file("project/test/my/mod.gleam", 3).
-spec one(integer()) -> integer().
one(X) ->
    one:one(X).
