compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__no_gleam_impl_no_annotations_function_fault_tolerance.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 365
expression: "\n@external(erlang, \"one\", \"two\")\npub fn no_impl()\n\npub type X = UnknownType\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "one", "two")
pub fn no_impl()

pub type X = UnknownType


----- ERROR
error: Missing type annotation
  ┌─ /src/one/two.gleam:3:1
  │
3 │ pub fn no_impl()
  │ ^^^^^^^^^^^^^^^^

A return annotation is missing from this function.

Functions with external implementations must have type annotations
so we can tell what type of values they accept and return.

error: Unknown type
  ┌─ /src/one/two.gleam:5:14
  │
5 │ pub type X = UnknownType
  │              ^^^^^^^^^^^

The type `UnknownType` is not defined or imported in this module.
