compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__private_external_function_calls.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 27
expression: "\n@external(erlang, \"m\", \"f\")\nfn go(x x: Int, y y: Int) -> Int\n\npub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "m", "f")
fn go(x x: Int, y y: Int) -> Int

pub fn x() { go(x: 1, y: 2) go(y: 3, x: 4) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([x/0]).

-file("project/test/my/mod.gleam", 5).
-spec x() -> integer().
x() ->
    m:f(1, 2),
    m:f(4, 3).
