compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__external_fn__public_elixir.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/external_fn.rs
assertion_line: 303
expression: "\n@external(erlang, \"Elixir.String\", \"main\")\npub fn do() -> Int\n"
snapshot_kind: text
---
----- SOURCE CODE

@external(erlang, "Elixir.String", "main")
pub fn do() -> Int


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([do/0]).

-file("project/test/my/mod.gleam", 3).
-spec do() -> integer().
do() ->
    'Elixir.String':main().
